refactor(settings): give SettingsGrants its own parser, leave DatasetGrants alone
Sharing a parser meant this branch gutted DatasetGrants - 66 lines out of the
most sensitive authorisation code in the platform - as a side effect of adding
a settings form. Its tests passed unchanged, but that is not the point: a
reviewer of a settings PR should not have to re-verify dataset access control
to sign it off.

SettingsGrants now parses /settings/<scope>/read|write itself. Same grammar as
dataset grants, so an administrator learns one convention, and separate code,
so a change to one cannot regress the other. DatasetGrants is byte-identical
to what it was before this branch.

The cost is a short duplicated loop over strings, with its own tests. Worth
unifying if a third user of the grammar turns up; not worth it for two.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>